# wcam

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.c732e43  README.md
camera/: camera.cpp  camera.hpp  jpegwrap.cpp  jpegwrap.h  strings.h  usbhotplug.cpp  usbhotplug.h
improcess/: improcess.cpp  improcess.h
src/: cameraform.cpp  cameraform.h  cameraform.ui  emitter.cpp  emitter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
